[metadata]
name = s3mu
version = 0.0.1
author = Sad Emu
description = Encrypt s3 uploads and decrypt s3 downloads
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Homepage = https://github.com/sad-emu/s3mu
classifiers =
    Development Status :: In Development
    Environment :: Console
    Intended Audience :: Developers
    License :: GNU GENERAL PUBLIC LICENSE
    Operating System :: Unix-like
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities
keywords = commandline utility

[options]
python_requires = >=3.12
packages = find:
install_requires =
    boto3
    cryptography
    setuptools